cursive-bootstrap/tests/ui/E-TYP/E-TYP-2301.cursive
// RUN: compile-fail
// DIAG: E-TYP-2301
// SPEC: 13.1
// DESC: Type arguments cannot be inferred

record Container<T> {
    value: T
}

public procedure main(move ctx: Context) -> i32 {
    let c: Container = Container { value: 42 }  //~ ERROR E-TYP-2301: cannot infer
    return 0
}
